--- a/bookshelf/package.json
+++ b/bookshelf/package.json
@@ -13,6 +13,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
