--- a/bookshelf/package.json
+++ b/bookshelf/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^4.2.2",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
