--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bookshelf
 spring.datasource.username=postgres
 spring.datasource.password=root
 
+jwt.secret=javainuse
+
 spring.jpa.hibernate.ddl-auto = update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
