--- a/bookshelf/package.json
+++ b/bookshelf/package.json
@@ -14,6 +14,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
