--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
   app:
-    image: 'tqs:latest'
+    image: 'demo:latest'
     build:
       context: ./src/main/docker
-    container_name: app
+    container_name: bookshelf_app
     depends_on:
       - db
     ports:
@@ -18,8 +18,8 @@ services:
   
   db:
     image: 'postgres:13.1-alpine'
-    container_name: db
+    container_name: bookshelf_db
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=deliverme
+      - POSTGRES_DB=bookshelf
